--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,8 @@
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
     "graphql": "^0.13.2",
-    "loadash": "^1.0.0"
+    "loadash": "^1.0.0",
+    "lodash": "^4.17.10",
+    "mongoose": "^5.2.3"
   }
 }
